# sd-orakelkatalog

./: .gitignore  README.md
.circleci/: config.yml
backend/: Dockerfile  LICENSE  README.md  pyproject.toml
backend-java/orakel-backend/: build.gradle  settings.gradle
backend-java/orakel-backend/src/main/java/no/digdir/fdk/orakelbackend/: LLMController.java  OrakelBackendApplication.java  PostgresService.java  SecurityConfig.java  VertexService.java
backend-java/orakel-backend/src/main/resources/: application.properties
backend-java/orakel-backend/src/test/java/no/digdir/fdk/orakelbackend/: OrakelBackendApplicationTests.java
backend/src/: gcp_bucket.py  gcp_postgres.py  gcp_secret.py  gcp_vertex.py  gcp_vertex_prompts.py  health.py  llm.py  main.py
backend/tests/: conftest.py
helm/sd-orakelkatalog/: Chart.yaml  values.yaml
helm/sd-orakelkatalog/charts/: common-1.17.1.tgz
poc/: fdk_v1_search.ipynb
poc/fdk-data/: embeddings.py  etl.py  search.py  util.py
poc/fdk-data-v2/: embeddings.py  etl.py  search.py  util.py
poc/fdk-data-v3/: embeddings.py  etl.py  setup_entrypoint.py  theme_mapping.py
poc/toy-data/: context_search.py  load_data.py  requirements.txt  vector_embeddings.py  vector_indexing.py
